--- a/examples/advanced/parallax_sections.html
+++ b/examples/advanced/parallax_sections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-	<meta charset="utf-8"> 
+	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=500" />
 	<meta name="keywords" content="ScrollMagic, example, scrolling, attaching, scrollbar, tween, tweenmax" />
@@ -18,7 +18,7 @@
 	<script type="text/javascript" src="../../js/lib/highlight.pack.js"></script>
 	<script type="text/javascript" src="../../js/lib/modernizr.custom.min.js"></script>
 	<script type="text/javascript" src="../../js/examples.js"></script>
-	
+
 	<script type="text/javascript" src="../../js/lib/greensock/TweenMax.min.js"></script>
 	<script type="text/javascript" src="../../scrollmagic/uncompressed/ScrollMagic.js"></script>
   <script type="text/javascript" src="../../scrollmagic/uncompressed/plugins/animation.gsap.js"></script>
@@ -29,7 +29,7 @@
 	<div id="content-wrapper">
 		<div id="example-wrapper">
 			<div class="scrollContent">
-				<section id="titlechart">
+				<!-- <section id="titlechart">
 					<div id="description">
 						<h1 class="badge gsap">Parallax Sections</h1>
 						<h2>The most common parallax application</h2>
@@ -42,7 +42,7 @@
 						</p>
 						<a href="#" class="viewsource">view source</a>
 					</div>
-				</section>
+				</section> -->
 				<section class="demo">
 					<style type="text/css">
 						.parallaxParent {
@@ -56,39 +56,232 @@
 						}
 					</style>
 					<div class="spacer s0"></div>
-					<div id="parallax1" class="parallaxParent">
-						<div style="background-image: url(../../img/example_parallax_bg1.png);"></div>
-					</div>
+					<!-- <div id="parallax1" class="parallaxParent">
+						<div style="background-image: url(./images/01.png);"></div>
+					</div> -->
 					<div class="spacer s1">
-						<div class="box2 blue">
+						<!-- <div class="box2 blue">
 							<p>Content 1</p>
 							<a href="#" class="viewsource">view source</a>
-						</div>
+						</div> -->
 					</div>
 					<div class="spacer s0"></div>
 					<div id="parallax2" class="parallaxParent">
-						<div style="background-image: url(../../img/example_parallax_bg2.png);"></div>
+						<img src="./images/01.png	" alt="">
+						<!-- <div style="background-image: url(../../img/example_parallax_bg2.png);"></div> -->
 					</div>
 					<div class="spacer s1">
-						<div class="box2 blue">
+						<img src="./images/02.png	" alt="">
+						<!-- <div class="box2 blue">
 							<p>Content 2</p>
+
 							<a href="#" class="viewsource">view source</a>
-						</div>
+						</div> -->
 					</div>
 					<div class="spacer s0"></div>
 					<div id="parallax3" class="parallaxParent">
-						<div style="background-image: url(../../img/example_parallax_bg3.png);"></div>
+						<div style="background-image: url(./images/03.png);"></div>
 					</div>
-					<div class="spacer s2"></div>
+					<!-- <div class="spacer s3"></div> -->
+					<div id="parallax4" >
+						<div>
+							<img src="./images/04.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax5">
+						<div>
+							<img src="./images/05.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax6">
+						<div>
+							<img src="./images/06.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax7">
+						<div>
+							<img src="./images/07.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax8">
+						<div>
+							<img src="./images/08.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax9">
+						<div>
+							<img src="./images/09.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax10">
+						<div>
+							<img src="./images/10.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax11">
+						<div>
+							<img src="./images/11.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax12">
+						<div>
+							<img src="./images/12.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax13">
+						<div>
+							<img src="./images/13.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax14" >
+						<div>
+							<img src="./images/14.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax15" >
+						<div>
+							<img src="./images/15.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax16" >
+						<div>
+							<img src="./images/16.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax17" >
+						<div>
+							<img src="./images/17.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax18" >
+						<div>
+							<img src="./images/18.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax19" >
+						<div>
+							<img src="./images/19.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax20" >
+						<div>
+							<img src="./images/21.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax21" >
+						<div>
+							<img src="./images/22.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax22" >
+						<div>
+							<img src="./images/23.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax23" >
+						<div>
+							<img src="./images/24.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax24" >
+						<div>
+							<img src="./images/25.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax25" >
+						<div>
+							<img src="./images/26.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax26" >
+						<div>
+							<img src="./images/27.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax27" >
+						<div>
+							<img src="./images/28.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax28" >
+						<div>
+							<img src="./images/29.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax29" >
+						<div>
+							<img src="./images/30.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax30" >
+						<div>
+							<img src="./images/31.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax31" >
+						<div>
+							<img src="./images/32.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax32" >
+						<div>
+							<img src="./images/33.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax33" >
+						<div>
+							<img src="./images/34.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax34" >
+						<div>
+							<img src="./images/35.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax35">
+						<div>
+							<img src="./images/36.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax36">
+						<div>
+							<img src="./images/37.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax37">
+						<div>
+							<img src="./images/38.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax38" >
+						<div>
+							<img src="./images/39.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax39" >
+						<div>
+							<img src="./images/40.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax40" >
+						<div>
+							<img src="./images/41.png	" alt="">
+						</div>
+					</div>
+					<div id="parallax41">
+						<div>
+							<img src="./images/42.png	" alt="">
+						</div>
+					</div>
 					<script>
 						// init controller
 						var controller = new ScrollMagic.Controller({globalSceneOptions: {triggerHook: "onEnter", duration: "200%"}});
 
 						// build scenes
-						new ScrollMagic.Scene({triggerElement: "#parallax1"})
-										.setTween("#parallax1 > div", {y: "80%", ease: Linear.easeNone})
-										.addIndicators()
-										.addTo(controller);
+						// new ScrollMagic.Scene({triggerElement: "#parallax1"})
+						// 				.setTween("#parallax1 > div", {y: "80%", ease: Linear.easeNone})
+						// 				.addIndicators()
+						// 				.addTo(controller);
 
 						new ScrollMagic.Scene({triggerElement: "#parallax2"})
 										.setTween("#parallax2 > div", {y: "80%", ease: Linear.easeNone})
@@ -99,6 +292,28 @@
 										.setTween("#parallax3 > div", {y: "80%", ease: Linear.easeNone})
 										.addIndicators()
 										.addTo(controller);
+						new ScrollMagic.Scene({triggerElement: "#parallax4"})
+										.setTween("#parallax4 > div", {x: "20%", ease: Linear.easeNone})
+										.addIndicators()
+										.addTo(controller);
+						new ScrollMagic.Scene({triggerElement: "#parallax5"})
+										.setTween("#parallax5 > div", {x: "-50%", ease: Linear.easeNone})
+										.addIndicators()
+										.addTo(controller);
+						for (let i = 0; i < 27; i++) {
+							if (i % 2 == 0) {
+								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
+												.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
+												.addIndicators()
+												.addTo(controller);
+							} else {
+								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
+												.setTween(`#parallax${5+i} > div`, {x: "-20%", ease: Linear.easeNone})
+												.addIndicators()
+												.addTo(controller);
+							}
+
+						}
 					</script>
 				</section>
 				<div class="spacer s_viewport"></div>
