--- a/examples/advanced/parallax_sections.html
+++ b/examples/advanced/parallax_sections.html
@@ -25,7 +25,7 @@
 	<script type="text/javascript" src="../../scrollmagic/uncompressed/plugins/debug.addIndicators.js"></script>
 </head>
 <body>
-	<ul id="menu"></ul>
+	<!-- <ul id="menu"></ul> -->
 	<div id="content-wrapper">
 		<div id="example-wrapper">
 			<div class="scrollContent">
