--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=500" />
 	<meta name="keywords" content="ScrollMagic, example, scrolling, attaching, scrollbar, tween, tweenmax" />
 	<meta name="author"	content="Jan Paepke (www.janpaepke.de)" />
-	<title>Parallax Sections - Examples - ScrollMagic</title>
+	<title>Tower of God: Web Comic</title>
 
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic|Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="./css/normalize.css" type="text/css">
