update: index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="author"	content="Jan Paepke (www.janpaepke.de)" />
 	<title>Tower of God: Web Comic</title>
 
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic|Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic|Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet" href="./css/normalize.css" type="text/css">
 	<link rel="stylesheet" href="./css/style.css" type="text/css">
 	<link rel="stylesheet" href="./css/examples.css" type="text/css">
@@ -235,40 +235,35 @@
 					</div>
 					<div id="parallax34" >
 						<div>
-							<img src="./images/35.png	" alt="">
+							<img src="./images/36.png	" alt="">
 						</div>
 					</div>
 					<div id="parallax35">
 						<div>
-							<img src="./images/36.png	" alt="">
+							<img src="./images/37.png	" alt="">
 						</div>
 					</div>
 					<div id="parallax36">
 						<div>
-							<img src="./images/37.png	" alt="">
+							<img src="./images/38.png	" alt="">
 						</div>
 					</div>
 					<div id="parallax37">
 						<div>
-							<img src="./images/38.png	" alt="">
+							<img src="./images/39.png	" alt="">
 						</div>
 					</div>
 					<div id="parallax38" >
 						<div>
-							<img src="./images/39.png	" alt="">
+							<img src="./images/40.png	" alt="">
 						</div>
 					</div>
 					<div id="parallax39" >
 						<div>
-							<img src="./images/40.png	" alt="">
-						</div>
-					</div>
-					<div id="parallax40" >
-						<div>
 							<img src="./images/41.png	" alt="">
 						</div>
 					</div>
-					<div id="parallax41">
+					<div id="parallax40" >
 						<div>
 							<img src="./images/42.png	" alt="">
 						</div>
@@ -300,7 +295,7 @@
 										.setTween("#parallax5 > div", {x: "-50%", ease: Linear.easeNone})
 										.addIndicators()
 										.addTo(controller);
-						for (let i = 0; i < 27; i++) {
+						for (let i = 0; i < 26; i++) {
 							if (i % 2 == 0) {
 								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
 												.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
