--- a/index.html
+++ b/index.html
@@ -26,25 +26,23 @@
 	<div id="content-wrapper">
 		<div id="example-wrapper">
 			<div class="scrollContent">
-				<!-- <section id="titlechart">
-					<div id="description">
-						<h1 class="badge gsap">Parallax Sections</h1>
-						<h2>The most common parallax application</h2>
+				<section id="titlechart">
+					<div id="description" style='color: white'>
+						<h1 class="badge gsap">Tower of God Adaptation</h1>
+						<h2>Creating a Web Comic Using Parallax Scroll</h2>
 						<p>
 							To create a classic parallax page effect simply add elements that contain the parallax background.<br>
 							Then use scenes to animate the child element's position.
 						</p>
-						<p>
-							The DOM is very straight forward and consists of consecutive containers.
-						</p>
-						<a href="#" class="viewsource">view source</a>
+						<button id='bgm-btn' style='color: black;'>Pause Music</button>
 					</div>
-				</section> -->
+				</section>
 				<!-- Audio Assets -->
 				<audio id='bgm' src="./music/bgm.mp3" type="audio/mpeg" ></audio>
-				<audio id='footsteps' src="./music/footsteps-4.mp3" type="audio/mpeg" style='display: none;'>
-				</audio>
+				<audio id='footsteps' src="./music/footsteps-4.mp3" type="audio/mpeg" style='display: none;'></audio>
 				<audio id='panting' src="./music/panting.wav" type="audio/wav" style='display: none;'></audio>
+				<audio id="woosh" src="./music/woosh.mp3" type="audio/mpeg"></audio>
+				<audio id="thump" src="./music/thump.wav" type="audio/wav"></audio>
 				<section class="demo">
 					<style type="text/css">
 						.parallaxParent {
@@ -58,9 +56,9 @@
 						}
 					</style>
 					<div class="spacer s0"></div>
-					<!-- <div id="parallax1" class="parallaxParent">
-						<div style="background-image: url(./images/01.png);"></div>
-					</div> -->
+					<div id="parallax1" class="parallaxParent">
+						<!-- <div style="background-image: url(./images/01.png);"></div> -->
+					</div>
 					<div class="spacer s1">
 						<!-- <div class="box2 blue">
 							<p>Content 1</p>
@@ -276,8 +274,11 @@
 
 						// initialize assets
 						let bgm = $('#bgm').get(0);
-						let audio1 = $('#footsteps').get(0);
-						let audio2 = $('#panting').get(0);
+						let footsteps = $('#footsteps').get(0);
+						let panting = $('#panting').get(0);
+						let woosh = $('#woosh').get(0);
+						let thump = $('#thump').get(0);
+						let bgmButton = $('#bgm-btn').get(0);
 
 						// helpers for animations
 						let zoomAnimation = element => TweenMax.to(element, 0.5, {css: {scaleX: 0.2, scaleY: 0.5}, ease: Linear.easeNone})
@@ -293,9 +294,9 @@
 										.on('enter leave', (e) => {
 											e.type == 'enter' ? footsteps.play() : footsteps.pause()
 										})
-										.on('progress', (e) => {
-											console.log(e.progress.toFixed(3))
-										})
+										// .on('progress', (e) => {
+										// 	console.log(e.progress.toFixed(3))
+										// })
 
 						new ScrollMagic.Scene({triggerElement: "#parallax3"})
 										.setTween("#parallax3 > div", {y: "80%", ease: Linear.easeNone})
@@ -304,9 +305,9 @@
 											panting.play()
 											//e.type == 'enter' ? panting.play() : panting.pause()
 										})
-										.on('progress', (e) => {
-											console.log(e.progress.toFixed(3))
-										})
+										// .on('progress', (e) => {
+										// 	console.log(e.progress.toFixed(3))
+										// })
 						new ScrollMagic.Scene({triggerElement: "#parallax4"})
 										.setTween("#parallax4 > div", {x: "50%", ease: Linear.easeNone})
 										.addTo(controller);
@@ -314,17 +315,41 @@
 										.setTween("#parallax5 > div", {x: "-50%", ease: Linear.easeNone})
 										.addTo(controller);
 						for (let i = 0; i < 36; i++) {
-							if (i % 2 == 0) {
+							if (i % 2 == 0 && i != 2 && i != 6 && i != 26) {
 								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
 												.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
 												.addTo(controller);
 							} else if (i == 27) {
-								console.log(`#parallax${5+i}`, 'yes')
+								//console.log(`#parallax${5+i}`, 'yes')
 								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
 												.setTween(zoomAnimation(`#parallax${5+i}`))
 												//.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
 												.addTo(controller);
-
+							} else if (i == 6) {
+								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
+												.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
+												//.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
+												.addTo(controller)
+												.on('enter', (e) => {
+													thump.play()
+												})
+							} else if (i == 24) {
+								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
+												.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
+												//.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
+												.addTo(controller)
+												.on('enter', (e) => {
+													woosh.play()
+												})
+							} else if (i == 3) {
+								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
+												.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
+												//.setTween(`#parallax${5+i} > div`, {x: "20%", ease: Linear.easeNone})
+												.addTo(controller)
+												.on('enter', (e) => {
+													console.log('panting stop')
+													panting.pause()
+												})
 							} else {
 								new ScrollMagic.Scene({triggerElement: `#parallax${5+i}`})
 												.setTween(`#parallax${5+i} > div`, {x: "-20%", ease: Linear.easeNone})
@@ -332,6 +357,12 @@
 							}
 
 						}
+						console.log(bgmButton)
+						bgmButton.addEventListener('click', (e)=> {
+							console.log(bgm)
+							bgm.pause()
+							console.log(bgm)
+						})
 					</script>
 				</section>
 				<div class="spacer s_viewport"></div>
